reference_bindings.rs

extern "C" {
    pub fn sixel_frame_get_pixelformat(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_transparent(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_multiframe(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_delay(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_frame_no(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_loop_no(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_strip_alpha(frame: *mut sixel_frame_t,
                                   bgcolor: *mut ::std::os::raw::c_uchar)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_resize(frame: *mut sixel_frame_t,
                              width: ::std::os::raw::c_int,
                              height: ::std::os::raw::c_int,
                              method_for_resampling: ::std::os::raw::c_int)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_frame_clip(frame: *mut sixel_frame_t,
                            x: ::std::os::raw::c_int,
                            y: ::std::os::raw::c_int,
                            width: ::std::os::raw::c_int,
                            height: ::std::os::raw::c_int) -> SIXELSTATUS;
}
pub type sixel_load_image_function =
    ::std::option::Option<unsafe extern "C" fn(frame: *mut sixel_frame_t,
                                               context:
                                                   *mut ::std::os::raw::c_void)
                              -> SIXELSTATUS>;
extern "C" {
    pub fn sixel_helper_load_image_file(filename:
                                            *const ::std::os::raw::c_char,
                                        fstatic: ::std::os::raw::c_int,
                                        fuse_palette: ::std::os::raw::c_int,
                                        reqcolors: ::std::os::raw::c_int,
                                        bgcolor: *mut ::std::os::raw::c_uchar,
                                        loop_control: ::std::os::raw::c_int,
                                        fn_load: sixel_load_image_function,
                                        finsecure: ::std::os::raw::c_int,
                                        cancel_flag:
                                            *const ::std::os::raw::c_int,
                                        context: *mut ::std::os::raw::c_void,
                                        allocator: *mut sixel_allocator_t)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_helper_write_image_file(data: *mut ::std::os::raw::c_uchar,
                                         width: ::std::os::raw::c_int,
                                         height: ::std::os::raw::c_int,
                                         palette:
                                             *mut ::std::os::raw::c_uchar,
                                         pixelformat: ::std::os::raw::c_int,
                                         filename:
                                             *const ::std::os::raw::c_char,
                                         imageformat: ::std::os::raw::c_int,
                                         allocator: *mut sixel_allocator_t)
     -> SIXELSTATUS;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sixel_encoder([u8; 0]);
pub type sixel_encoder_t = sixel_encoder;
extern "C" {
    pub fn sixel_encoder_new(ppencoder: *mut *mut sixel_encoder_t,
                             allocator: *mut sixel_allocator_t)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_encoder_create() -> *mut sixel_encoder_t;
}
extern "C" {
    pub fn sixel_encoder_ref(encoder: *mut sixel_encoder_t);
}
extern "C" {
    pub fn sixel_encoder_unref(encoder: *mut sixel_encoder_t);
}
extern "C" {
    pub fn sixel_encoder_set_cancel_flag(encoder: *mut sixel_encoder_t,
                                         cancel_flag:
                                             *mut ::std::os::raw::c_int)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_encoder_setopt(encoder: *mut sixel_encoder_t,
                                arg: ::std::os::raw::c_int,
                                optarg: *const ::std::os::raw::c_char)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_encoder_encode(encoder: *mut sixel_encoder_t,
                                filename: *const ::std::os::raw::c_char)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_encoder_encode_bytes(encoder: *mut sixel_encoder_t,
                                      // length = width * height * depth
                                      bytes: *mut ::std::os::raw::c_uchar,
                                      width: ::std::os::raw::c_int,
                                      height: ::std::os::raw::c_int,
                                      pixelformat: ::std::os::raw::c_int,
                                      palette: *mut ::std::os::raw::c_uchar,
                                      ncolors: ::std::os::raw::c_int)
     -> SIXELSTATUS;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sixel_decoder([u8; 0]);
pub type sixel_decoder_t = sixel_decoder;
extern "C" {
    pub fn sixel_decoder_new(ppdecoder: *mut *mut sixel_decoder_t,
                             allocator: *mut sixel_allocator_t)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_decoder_create() -> *mut sixel_decoder_t;
}
extern "C" {
    pub fn sixel_decoder_ref(decoder: *mut sixel_decoder_t);
}
extern "C" {
    pub fn sixel_decoder_unref(decoder: *mut sixel_decoder_t);
}
extern "C" {
    pub fn sixel_decoder_setopt(decoder: *mut sixel_decoder_t,
                                arg: ::std::os::raw::c_int,
                                optarg: *const ::std::os::raw::c_char)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_decoder_decode(decoder: *mut sixel_decoder_t) -> SIXELSTATUS;
}
